Make the ARC opt-in preference not synced.

If we sync the ARC opt-in prefence we may cause unintentional data loss
when the user opts-out of ARC on one device.

BUG=633017
TEST=Manually test by opting out of ARC on one machine and observing a
second (opted-in) machine's state.

Review-Url: https://codereview.chromium.org/2198733002
Cr-Commit-Position: refs/heads/master@{#408909}

Former-commit-id: 1c7841e8e0322b8c3599710e017ff0fb38ab056f