chrome/browser/chromeos/arc/arc_auth_service.cc
@@ -153,9 +153,9 @@ ArcAuthService* ArcAuthService::Get() {
 // static
 void ArcAuthService::RegisterProfilePrefs(
     user_prefs::PrefRegistrySyncable* registry) {
-  registry->RegisterBooleanPref(
-      prefs::kArcEnabled, false,
-      user_prefs::PrefRegistrySyncable::SYNCABLE_PREF);
+  // TODO(dspaid): Add a syncable default preference so that new
+  // devices get the last opt-in preference.
+  registry->RegisterBooleanPref(prefs::kArcEnabled, false);
   registry->RegisterBooleanPref(prefs::kArcSignedIn, false);
   registry->RegisterBooleanPref(prefs::kArcBackupRestoreEnabled, true);
   registry->RegisterBooleanPref(prefs::kArcLocationServiceEnabled, true);
